[gd_scene load_steps=6 format=2]

[ext_resource path="res://godot_experiments_social_preview.jpg" type="Texture" id=1]
[ext_resource path="res://loading.shader" type="Shader" id=2]
[ext_resource path="res://test.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/percentage = 0.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/percentage = 0.0

[node name="Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -21.02
margin_right = 320.0
margin_bottom = 298.98
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="TextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectTop" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -347.089
margin_right = 320.0
margin_bottom = -27.089
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="value_changed" from="TextureRect/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
